--- a/about.html
+++ b/about.html
@@ -8,39 +8,54 @@
     <title>Caitlin Fullam's photography website</title>
     <meta name="description" content="A personal photography website.">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
     <header role=“banner”>
         <h1>caitlin fullam</h1>
-    <nav role="navigation" class="navbar">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html" target="_self">photography</a></li>
-            <li class="active"><a class="active" href="about.html" target="_self">about</a></li>
-            <li class="active"><a href="contact.html" target="_self">contact</a></li>
-            <li class="active"><a  href="https://www.facebook.com/caitlin.fullam" target="_blank">blog</a></li>
-        </ul>
-        <div id="socialmediaicons">
-        <a href="https://www.linkedin.com/in/caitlinfullam" target="_blank"><img src="images/linkedin.png" alt="Linkedin button link" style="width:20px;height:20px"></a>
-        <a href="https://caitlin-fullam.squarespace.com" target="_blank"><img src="images/squarespace.png" alt="Squarespace button link" style="width:22px;height:22px"></a>
-        <a href="https://www.instagram.com/cait.lin.full.am/?hl=en" target="_blank"><img src="images/instagram.png" alt="Instagram button link" style="width:20px;height:20px"></a>
-        </div>
-    </nav>  
+        <nav role="navigation" class="navbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html" target="_self">photography</a></li>
+                <li class="active"><a class="active" href="about.html" target="_self">about</a></li>
+                <li class="active"><a href="contact.html" target="_self">contact</a></li>
+                <li class="active"><a href="https://blog.caitlinfullam.com/" target="_blank">blog</a></li>
+            </ul>
+            <div id="socialmediaicons">
+                <a href="https://www.linkedin.com/in/caitlinfullam" target="_blank"><img src="images/linkedin.png" alt="Linkedin button link" style="width:20px;height:20px"></a>
+                <a href="https://blog.caitlinfullam.com/" target="_blank"><img src="images/wordpress-logo.png" alt="Wordpress button link" style="width:22px;height:22px"></a>
+                <a href="https://www.instagram.com/caitlinnicolefullam/" target="_blank"><img src="images/instagram.png" alt="Instagram button link" style="width:20px;height:20px"></a>
+            </div>
+        </nav>
     </header>
     <main role=“main” class="aboutme">
-        <p id="aboutme"><img src="images/photoofme.JPG" alt="photo of me in mountains" style="width:50%;height:50%"class="photoofme">Caitlin seeks to expose and share the beauty that lives in this world through photography, storytelling, and art.  Having travelled extensively and lived in several different countries, she is most inspired by adventure, chasing the unknown, breath-taking landscapes, the simple things, and a deep nostalgia for the places she once knew and people she has met along the way.  Quitting her day job in order to pursue her passions was a bold move, but ultimately necessary to grow, create, and travel. </p>
-        <p id="aboutme">If you bring her slightly soggy mozzarella sticks she will love you for all eternity, but working together would be fun too.  </p>
+        <p id="aboutme"><img src="images/photoofme.JPG" alt="photo of me in mountains" style="width:50%;height:50%" class="photoofme">Caitlin seeks to expose and share the beauty that lives in this world through photography, storytelling, and art. Having travelled extensively and lived in several different countries, she is most inspired by adventure, chasing the unknown, breath-taking landscapes, the simple things, and a deep nostalgia for the places she once knew and people she has met along the way. Quitting her day job in order to pursue her passions was a bold move, but ultimately necessary to grow, create, and travel. </p>
+        <p id="aboutme">If you bring her slightly soggy mozzarella sticks she will love you for all eternity, but working together would be fun too. </p>
     </main>
-<hr>
+    <hr>
     <footer role=“content info”>
         <div class="row">
-        <div class="col-lg-12">
-        <p>Copyright &copy; Caitlin Fullam 2016</p>
+            <div class="col-lg-12">
+                <p>Copyright &copy; Caitlin Fullam 2016</p>
             </div>
-            </div>
+        </div>
     </footer>
-    
-    </body> 
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-81899514-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+</body>
 
 </html>
