--- a/contact.html
+++ b/contact.html
@@ -8,45 +8,64 @@
     <title>Caitlin Fullam's photography website</title>
     <meta name="description" content="A personal photography website.">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
     <header role=“banner”>
         <h1>caitlin fullam</h1>
-    <nav role="navigation" class="navbar">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html" target="_self">photography</a></li>
-            <li class="active"><a href="about.html" target="_self">about</a></li>
-            <li class="active"><a class="active" href="contact.html" target="_self">contact</a></li>
-            <li class="active"><a  href="https://www.facebook.com/caitlin.fullam" target="_blank">blog</a></li>
-        </ul>
-        <div id="socialmediaicons">
-        <a href="https://www.linkedin.com/in/caitlinfullam" target="_blank"><img src="images/linkedin.png" alt="Linkedin button link" style="width:20px;height:20px"></a>
-        <a href="https://caitlin-fullam.squarespace.com" target="_blank"><img src="images/squarespace.png" alt="Squarespace button link" style="width:22px;height:22px"></a>
-        <a href="https://www.instagram.com/cait.lin.full.am/?hl=en" target="_blank"><img src="images/instagram.png" alt="Instagram button link" style="width:20px;height:20px"></a>
-        </div>
-    </nav>  
+        <nav role="navigation" class="navbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html" target="_self">photography</a></li>
+                <li class="active"><a href="about.html" target="_self">about</a></li>
+                <li class="active"><a class="active" href="contact.html" target="_self">contact</a></li>
+                <li class="active"><a href="https://blog.caitlinfullam.com/" target="_blank">blog</a></li>
+            </ul>
+            <div id="socialmediaicons">
+                <a href="https://www.linkedin.com/in/caitlinfullam" target="_blank"><img src="images/linkedin.png" alt="Linkedin button link" style="width:20px;height:20px"></a>
+                <a href="https://blog.caitlinfullam.com/" target="_blank"><img src="images/wordpress-logo.png" alt="Wordpress button link" style="width:22px;height:22px"></a>
+                <a href="https://www.instagram.com/caitlinnicolefullam/" target="_blank"><img src="images/instagram.png" alt="Instagram button link" style="width:20px;height:20px"></a>
+            </div>
+        </nav>
     </header>
     <main role=“main” class="contactme">
         <p class="contactmelist">
-            <img src="images/mountainsunset.JPG" alt="photo sunset in mountains" style="width:60%;height:60%" class="contactmephoto"> Please feel free to email me at <a href="mailto:fullam.caitlin@gmail.com?Subject=Hey%20there" target="_top">fullamcaitlin@gmail.com</a>, or check out my <a href="https://www.instagram.com/cait.lin.full.am/" target="_blank">Instagram</a>, <a href="https://caitlin-fullam.squarespace.com" target="_blank">travel writing blog</a>, and <a href="https://www.linkedin.com/in/caitlinfullam" target="_blank">LinkedIn</a>.  
-            <br><br>I would love to hear from you!
-            <br><br>Or you can send me mail the old fashioned way:<br>
-            <br>Caitlin Fullam<br>
-            1095 Quince Avenue<br>
-            Boulder, CO 80304<br>
+            <img src="images/mountainsunset.JPG" alt="photo sunset in mountains" style="width:60%;height:60%" class="contactmephoto"> Please feel free to email me at <a href="mailto:fullam.caitlin@gmail.com?Subject=Hey%20there" target="_top">fullamcaitlin@gmail.com</a>, or check out my <a href="https://www.instagram.com/cait.lin.full.am/" target="_blank">Instagram</a>, <a href="https://caitlin-fullam.squarespace.com" target="_blank">travel writing blog</a>, and <a href="https://www.linkedin.com/in/caitlinfullam" target="_blank">LinkedIn</a>.
+            <br>
+            <br>I would love to hear from you!
+            <br>
+            <br>Or you can send me mail the old fashioned way:
+            <br>
+            <br>Caitlin Fullam
+            <br> 1095 Quince Avenue
+            <br> Boulder, CO 80304
+            <br>
         </p>
     </main>
-<hr>
+    <hr>
     <footer role=“content info”>
         <div class="row">
-        <div class="col-lg-12">
-        <p>Copyright &copy; Caitlin Fullam 2016</p>
+            <div class="col-lg-12">
+                <p>Copyright &copy; Caitlin Fullam 2016</p>
             </div>
-            </div>
+        </div>
     </footer>
-    
-    </body> 
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-81899514-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+</body>
 
 </html>
