--- a/index.html
+++ b/index.html
@@ -34,110 +34,110 @@
     <main role=“main”>
         <a name="top"></a>
         <div class="row three">
-            <div class="col s12 l4">
-                <a href="images/oregoncoastlinefavorite.JPG" data-lightbox="photoset"><img src="images/oregoncoastlinefavorite.JPG" alt="Oregon coastline 1" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/oregoncoastlinefavorite.JPG" data-lightbox="photoset"><img src="images/oregoncoastlinefavorite.JPG" alt="Oregon coastline 1" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
-            <div class="col s12 l4">
-                <a href="images/catinsevilla.jpg" data-lightbox="photoset"><img src="images/catinsevilla.jpg" alt="Cat in Sevilla" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/catinsevilla.jpg" data-lightbox="photoset"><img src="images/catinsevilla.jpg" alt="Cat in Sevilla" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
-            <div class="col s12 l4">
-                <a href="images/oregoncoastlinedark.JPG" data-lightbox="photoset"><img src="images/oregoncoastlinedark.JPG" alt="Oregon coastline 2" class="threeacross" data-lightbox="photoset"></a>
-            </div>
-        </div>
-
-        <div class="row two">
-            <div class="col s12 l6">
-                <a href="images/rockymountains.jpg" data-lightbox="photoset"><img src="images/rockymountains.jpg" alt="Rocky Mountains" class="twoacross" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l6">
-                <a href="images/jacksonlake.jpg" data-lightbox="photoset"><img src="images/jacksonlake.jpg" alt="Jackson Lake Wyoming" class="twoacross" data-lightbox="photoset"></a>
-            </div>
-        </div>
-
-        <div class="row three">
-            <div class="col s12 l4">
-                <a href="images/flowerinwater.jpg" data-lightbox="photoset"><img src="images/flowerinwater.jpg" alt="Flower in water" class="threeacross" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4">
-                <a href="images/window.jpg" data-lightbox="photoset"><img src="images/window.jpg" alt="Window view" class="threeacross" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4">
-                <a href="images/recordplayer.jpg" data-lightbox="photoset"><img src="images/recordplayer.jpg" alt="Record player" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/oregoncoastlinedark.JPG" data-lightbox="photoset"><img src="images/oregoncoastlinedark.JPG" alt="Oregon coastline 2" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row two">
-            <div class="col s12 l6">
-                <a href="images/barcelonabalcony.JPG" data-lightbox="photoset"><img src="images/barcelonabalcony.JPG" alt="Barcelona balcony" class="twoacross" data-lightbox="photoset"></a>
+            <div class="col s12 l6 crop-height">
+                <a href="images/rockymountains.jpg" data-lightbox="photoset"><img src="images/rockymountains.jpg" alt="Rocky Mountains" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
-            <div class="col s12 l6">
-                <a href="images/cactus.jpg" data-lightbox="photoset"><img src="images/cactus.jpg" alt="Cactus" class="twoacross" data-lightbox="photoset"></a>
-            </div>
-        </div>
-
-        <div class="row three">
-            <div class="col s12 l4">
-                <a href="images/cactichina.JPG" data-lightbox="photoset"><img src="images/cactichina.JPG" alt="Cacti in China" class="threeacross" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4">
-                <a href="images/flowersinseattle.JPG" data-lightbox="photoset"><img src="images/flowersinseattle.JPG" alt="Flower in Seattle" class="threeacross" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4">
-                <a href="images/mountainsunset.JPG" data-lightbox="photoset"><img src="images/mountainsunset.JPG" alt="Mountain sunset Breckenridge" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l6 crop-height">
+                <a href="images/jacksonlake.jpg" data-lightbox="photoset"><img src="images/jacksonlake.jpg" alt="Jackson Lake Wyoming" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row three">
-            <div class="col s12 l4">
-                <a href="images/Nick.JPG" data-lightbox="photoset"><img src="images/Nick.JPG" alt="Portrait of Nick" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/flowerinwater.jpg" data-lightbox="photoset"><img src="images/flowerinwater.jpg" alt="Flower in water" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
-            <div class="col s12 l4">
-                <a href="images/ducksinfog.JPG" data-lightbox="photoset"><img src="images/ducksinfog.JPG" alt="Ducks in foggy lake" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/window.jpg" data-lightbox="photoset"><img src="images/window.jpg" alt="Window view" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
-            <div class="col s12 l4">
-                <a href="images/gardenofgods.JPG" data-lightbox="photoset"><img src="images/gardenofgods.JPG" alt="Garden of the Gods" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/recordplayer.jpg" data-lightbox="photoset"><img src="images/recordplayer.jpg" alt="Record player" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row two">
-            <div class="col s12 l6">
-                <a href="images/sintrabuildings.jpg" data-lightbox="photoset"><img src="images/sintrabuildings.jpg" alt="Buildings in Sintra Lisbon" class="twoacross" data-lightbox="photoset"></a>
+            <div class="col s12 l6 crop-height">
+                <a href="images/barcelonabalcony.JPG" data-lightbox="photoset"><img src="images/barcelonabalcony.JPG" alt="Barcelona balcony" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
-            <div class="col s12 l6">
-                <a href="images/church.JPG" data-lightbox="photoset"><img src="images/church.JPG" alt="Church in Italy" class="twoacross" data-lightbox="photoset"></a>
+            <div class="col s12 l6 crop-height">
+                <a href="images/cactus.jpg" data-lightbox="photoset"><img src="images/cactus.jpg" alt="Cactus" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row three">
-            <div class="col s12 l4">
-                <a href="images/canyonsutah.jpg" data-lightbox="photoset"><img src="images/canyonsutah.jpg" alt="Canyons in Utah" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/cactichina.JPG" data-lightbox="photoset"><img src="images/cactichina.JPG" alt="Cacti in China" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
-            <div class="col s12 l4">
-                <a href="images/burgerscamping.jpg" data-lightbox="photoset"><img src="images/burgerscamping.jpg" alt="Cooking burgers camping" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/flowersinseattle.JPG" data-lightbox="photoset"><img src="images/flowersinseattle.JPG" alt="Flower in Seattle" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
-            <div class="col s12 l4">
-                <a href="images/bluemountains.jpg" data-lightbox="photoset"><img src="images/bluemountains.jpg" alt="Snow covered mountains and lake" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/mountainsunset.JPG" data-lightbox="photoset"><img src="images/mountainsunset.JPG" alt="Mountain sunset Breckenridge" class="threeacross scale" data-lightbox="photoset"></a>
+            </div>
+        </div>
+
+        <div class="row three">
+            <div class="col s12 l4 crop-height">
+                <a href="images/Nick.JPG" data-lightbox="photoset"><img src="images/Nick.JPG" alt="Portrait of Nick" class="threeacross scale" data-lightbox="photoset"></a>
+            </div>
+            <div class="col s12 l4 crop-height">
+                <a href="images/ducksinfog.JPG" data-lightbox="photoset"><img src="images/ducksinfog.JPG" alt="Ducks in foggy lake" class="threeacross scale" data-lightbox="photoset"></a>
+            </div>
+            <div class="col s12 l4 crop-height">
+                <a href="images/gardenofgods.JPG" data-lightbox="photoset"><img src="images/gardenofgods.JPG" alt="Garden of the Gods" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row two">
-            <div class="col s12 l6">
-                <a href="images/chinesefood.JPG" data-lightbox="photoset"><img src="images/chinesefood.JPG" alt="Dumplings and beer" class="twoacross" data-lightbox="photoset"></a>
+            <div class="col s12 l6 crop-height">
+                <a href="images/sintrabuildings.jpg" data-lightbox="photoset"><img src="images/sintrabuildings.jpg" alt="Buildings in Sintra Lisbon" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
-            <div class="col s12 l6">
-                <a href="images/saul.JPG" data-lightbox="photoset"><img src="images/saul.JPG" alt="Portrait of Saul" class="twoacross" data-lightbox="photoset"></a>
+            <div class="col s12 l6 crop-height">
+                <a href="images/church.JPG" data-lightbox="photoset"><img src="images/church.JPG" alt="Church in Italy" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row three">
-            <div class="col s12 l4">
-                <a href="images/vwvan.jpg" data-lightbox="photoset"><img src="images/vwvan.jpg" alt="Volkswagen Van" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/canyonsutah.jpg" data-lightbox="photoset"><img src="images/canyonsutah.jpg" alt="Canyons in Utah" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
-            <div class="col s12 l4">
-                <a href="images/edinburghcastle.jpg" data-lightbox="photoset"><img src="images/edinburghcastle.jpg" alt="Edinburgh castle" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/burgerscamping.jpg" data-lightbox="photoset"><img src="images/burgerscamping.jpg" alt="Cooking burgers camping" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
-            <div class="col s12 l4">
-                <a href="images/flowersbokeh.JPG" data-lightbox="photoset"><img src="images/flowersbokeh.JPG" alt="Flowers bokeh in Granada" class="threeacross" data-lightbox="photoset"></a>
+            <div class="col s12 l4 crop-height">
+                <a href="images/bluemountains.jpg" data-lightbox="photoset"><img src="images/bluemountains.jpg" alt="Snow covered mountains and lake" class="threeacross scale"  data-lightbox="photoset"></a>
+            </div>
+        </div>
+
+        <div class="row two">
+            <div class="col s12 l6 crop-height">
+                <a href="images/chinesefood.JPG" data-lightbox="photoset"><img src="images/chinesefood.JPG" alt="Dumplings and beer" class="twoacross scale" data-lightbox="photoset"></a>
+            </div>
+            <div class="col s12 l6 crop-height">
+                <a href="images/saul.JPG" data-lightbox="photoset"><img src="images/saul.JPG" alt="Portrait of Saul" class="twoacross scale" data-lightbox="photoset"></a>
+            </div>
+        </div>
+
+        <div class="row three">
+            <div class="col s12 l4 crop-height">
+                <a href="images/vwvan.jpg" data-lightbox="photoset"><img src="images/vwvan.jpg" alt="Volkswagen Van" class="threeacross scale" data-lightbox="photoset"></a>
+            </div>
+            <div class="col s12 l4 crop-height">
+                <a href="images/edinburghcastle.jpg" data-lightbox="photoset"><img src="images/edinburghcastle.jpg" alt="Edinburgh castle" class="threeacross scale" data-lightbox="photoset"></a>
+            </div>
+            <div class="col s12 l4 crop-height">
+                <a href="images/flowersbokeh.JPG" data-lightbox="photoset"><img src="images/flowersbokeh.JPG" alt="Flowers bokeh in Granada" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
         <div class="backtotop"><a href="#top">Back to top</a></div>
@@ -151,7 +151,8 @@
         </div>
     </footer>
     <script src="javascript/lightbox-plus-jquery.js"></script>
-    <script>
+    <script src="javascript/scripts.js"></script>
+    <script> 
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function() {
