fixed mobile nav

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 
 <body>
     <header role=“banner”>
-        <h1>caitlin fullam</h1>
         <nav role="navigation" class="navbar">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+        </button>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <h1>caitlin fullam</h1>
             <ul class="nav navbar-nav">
                 <li class="active"><a class="active" href="index.html" target="_self">photography</a></li>
                 <li class="active"><a href="about.html" target="_self">about</a></li>
@@ -28,6 +34,7 @@
                 <a href="https://www.linkedin.com/in/caitlinfullam" target="_blank"><img src="images/linkedin.png" alt="Linkedin button link" style="width:20px;height:20px"></a>
                 <a href="https://blog.caitlinfullam.com/" target="_blank"><img src="images/wordpress-logo.png" alt="Wordpress button link" style="width:22px;height:22px"></a>
                 <a href="https://www.instagram.com/caitlinnicolefullam/" target="_blank"><img src="images/instagram.png" alt="Instagram button link" style="width:20px;height:20px"></a>
+            </div>
             </div>
         </nav>
     </header>
@@ -151,6 +158,7 @@
         </div>
     </footer>
     <script src="javascript/lightbox-plus-jquery.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="javascript/scripts.js"></script>
     <script> 
         (function(i, s, o, g, r, a, m) {
