--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,14 @@
 
 <body>
     <header role=“banner”>
-        <h1>caitlin fullam</h1>
         <nav role="navigation" class="navbar">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+        </button>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <h1>caitlin fullam</h1>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html" target="_self">photography</a></li>
                 <li class="active"><a href="about.html" target="_self">about</a></li>
