--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
             </div>
         </div>
     </footer>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
