--- a/contact.html
+++ b/contact.html
@@ -37,16 +37,9 @@
     </header>
     <main role=“main” class="contactme">
         <p class="contactmelist">
-            <img src="images/mountainsunset.JPG" alt="photo sunset in mountains" style="width:60%;height:60%" class="contactmephoto"> Please feel free to email me at <a href="mailto:fullam.caitlin@gmail.com?Subject=Hey%20there" target="_top">fullamcaitlin@gmail.com</a>, or check out my <a href="https://www.instagram.com/caitlinnicolefullam/" target="_blank">Instagram</a>, <a href="https://blog.caitlinfullam.com" target="_blank">travel blog</a>, and <a href="https://www.linkedin.com/in/caitlinfullam" target="_blank">LinkedIn</a>.
+            <img src="images/flowersbokeh.JPG" alt="flowersbokeh" style="width:60%;height:60%" class="contactmephoto"> Please feel free to email me at <a href="mailto:fullam.caitlin@gmail.com?Subject=Hey%20there" target="_top">fullamcaitlin@gmail.com</a>, or check out my <a href="https://www.instagram.com/caitlinnicolefullam/" target="_blank">Instagram</a>, <a href="https://blog.caitlinfullam.com" target="_blank">travel blog</a>, and <a href="https://www.linkedin.com/in/caitlinfullam" target="_blank">LinkedIn</a>.
             <br>
             <br>I would love to hear from you!
-            <br>
-            <br>Or you can send me mail the old fashioned way:
-            <br>
-            <br>Caitlin Fullam
-            <br> 1095 Quince Avenue
-            <br> Boulder, CO 80304
-            <br>
         </p>
     </main>
     <hr>
