--- a/index.html
+++ b/index.html
@@ -42,109 +42,109 @@
         <a name="top"></a>
         <div class="row three">
             <div class="col s12 l4 crop-height">
-                <a href="images/oregoncoastlinefavorite.JPG" data-lightbox="photoset"><img src="images/oregoncoastlinefavorite.JPG" alt="Oregon coastline 1" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/trilliumreflection.jpg" data-lightbox="photoset"><img src="images/trilliumreflection.jpg" alt="Trillium Reflection" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/catinsevilla.jpg" data-lightbox="photoset"><img src="images/catinsevilla.jpg" alt="Cat in Sevilla" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/irenenick3.jpg" data-lightbox="photoset"><img src="images/irenenick3.jpg" alt="Irene and Nick 3" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/oregoncoastlinedark.JPG" data-lightbox="photoset"><img src="images/oregoncoastlinedark.JPG" alt="Oregon coastline 2" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/trilliumme.jpg" data-lightbox="photoset"><img src="images/trilliumme.jpg" alt="Me at Trillium Lake" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row two">
             <div class="col s12 l6 crop-height">
-                <a href="images/rockymountains.jpg" data-lightbox="photoset"><img src="images/rockymountains.jpg" alt="Rocky Mountains" class="twoacross scale" data-lightbox="photoset"></a>
+                <a href="images/irenenick1.jpg" data-lightbox="photoset"><img src="images/irenenick1.jpg" alt="Irene and Nick 1" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l6 crop-height">
-                <a href="images/jacksonlake.jpg" data-lightbox="photoset"><img src="images/jacksonlake.jpg" alt="Jackson Lake Wyoming" class="twoacross scale" data-lightbox="photoset"></a>
+                <a href="images/irenenick2.jpg" data-lightbox="photoset"><img src="images/irenenick2.jpg" alt="Irene and Nick 2" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row three">
             <div class="col s12 l4 crop-height">
-                <a href="images/flowerinwater.jpg" data-lightbox="photoset"><img src="images/flowerinwater.jpg" alt="Flower in water" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/trilliumheron.jpg" data-lightbox="photoset"><img src="images/trilliumheron.jpg" alt="Heron at Trillium Lake" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/window.jpg" data-lightbox="photoset"><img src="images/window.jpg" alt="Window view" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/aaron1.jpg" data-lightbox="photoset"><img src="images/aaron1.jpg" alt="Aaron 1" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/recordplayer.jpg" data-lightbox="photoset"><img src="images/recordplayer.jpg" alt="Record player" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/trilliumben.jpg" data-lightbox="photoset"><img src="images/trilliumben.jpg" alt="Ben at Trillium Lake" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row two">
             <div class="col s12 l6 crop-height">
-                <a href="images/barcelonabalcony.JPG" data-lightbox="photoset"><img src="images/barcelonabalcony.JPG" alt="Barcelona balcony" class="twoacross scale" data-lightbox="photoset"></a>
+                <a href="images/ben1.jpg" data-lightbox="photoset"><img src="images/ben1.jpg" alt="Ben 1" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l6 crop-height">
-                <a href="images/cactus.jpg" data-lightbox="photoset"><img src="images/cactus.jpg" alt="Cactus" class="twoacross scale" data-lightbox="photoset"></a>
+                <a href="images/Ben2.jpg" data-lightbox="photoset"><img src="images/Ben2.jpg" alt="Ben2" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row three">
             <div class="col s12 l4 crop-height">
-                <a href="images/cactichina.JPG" data-lightbox="photoset"><img src="images/cactichina.JPG" alt="Cacti in China" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/zionflowers.jpg" data-lightbox="photoset"><img src="images/zionflowers.jpg" alt="Zion Flowers" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/flowersinseattle.JPG" data-lightbox="photoset"><img src="images/flowersinseattle.JPG" alt="Flower in Seattle" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/bigsur.jpg" data-lightbox="photoset"><img src="images/bigsur.jpg" alt="Big Sur" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/mountainsunset.JPG" data-lightbox="photoset"><img src="images/mountainsunset.JPG" alt="Mountain sunset Breckenridge" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/yosemite.jpg" data-lightbox="photoset"><img src="images/yosemite.jpg" alt="Yosemite" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row three">
             <div class="col s12 l4 crop-height">
-                <a href="images/Nick.JPG" data-lightbox="photoset"><img src="images/Nick.JPG" alt="Portrait of Nick" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/aaron2.jpg" data-lightbox="photoset"><img src="images/aaron2.jpg" alt="Aaron 2" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/ducksinfog.JPG" data-lightbox="photoset"><img src="images/ducksinfog.JPG" alt="Ducks in foggy lake" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/berries.jpg" data-lightbox="photoset"><img src="images/berries.jpg" alt="Berries" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/gardenofgods.JPG" data-lightbox="photoset"><img src="images/gardenofgods.JPG" alt="Garden of the Gods" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/aaron3.jpg" data-lightbox="photoset"><img src="images/aaron3.jpg" alt="Aaron 3" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row two">
             <div class="col s12 l6 crop-height">
-                <a href="images/sintrabuildings.jpg" data-lightbox="photoset"><img src="images/sintrabuildings.jpg" alt="Buildings in Sintra Lisbon" class="twoacross scale" data-lightbox="photoset"></a>
+                <a href="images/pineneedles.jpg" data-lightbox="photoset"><img src="images/pineneedles.jpg" alt="Pine needles" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l6 crop-height">
-                <a href="images/church.JPG" data-lightbox="photoset"><img src="images/church.JPG" alt="Church in Italy" class="twoacross scale" data-lightbox="photoset"></a>
+                <a href="images/selfportrait.jpg" data-lightbox="photoset"><img src="images/selfportrait.jpg" alt="Self Portrait" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row three">
             <div class="col s12 l4 crop-height">
-                <a href="images/canyonsutah.jpg" data-lightbox="photoset"><img src="images/canyonsutah.jpg" alt="Canyons in Utah" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/mushrooms.jpg" data-lightbox="photoset"><img src="images/mushrooms.jpg" alt="Mushrooms" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/burgerscamping.jpg" data-lightbox="photoset"><img src="images/burgerscamping.jpg" alt="Cooking burgers camping" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/bridge.jpg" data-lightbox="photoset"><img src="images/bridge.jpg" alt="St Johns Bridge" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/bluemountains.jpg" data-lightbox="photoset"><img src="images/bluemountains.jpg" alt="Snow covered mountains and lake" class="threeacross scale"  data-lightbox="photoset"></a>
+                <a href="images/cathedralpark.jpg" data-lightbox="photoset"><img src="images/cathedralpark.jpg" alt="Cathedral Park" class="threeacross scale"  data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row two">
             <div class="col s12 l6 crop-height">
-                <a href="images/chinesefood.JPG" data-lightbox="photoset"><img src="images/chinesefood.JPG" alt="Dumplings and beer" class="twoacross scale" data-lightbox="photoset"></a>
+                <a href="images/isa1.jpg" data-lightbox="photoset"><img src="images/isa1.jpg" alt="Isa 1" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l6 crop-height">
-                <a href="images/saul.JPG" data-lightbox="photoset"><img src="images/saul.JPG" alt="Portrait of Saul" class="twoacross scale" data-lightbox="photoset"></a>
+                <a href="images/isa2.jpg" data-lightbox="photoset"><img src="images/isa2.jpg" alt="Isa 2" class="twoacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
 
         <div class="row three">
             <div class="col s12 l4 crop-height">
-                <a href="images/vwvan.jpg" data-lightbox="photoset"><img src="images/vwvan.jpg" alt="Volkswagen Van" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/horseshoebend.JPG" data-lightbox="photoset"><img src="images/horseshoebend.JPG" alt="Horseshoe Bend" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/edinburghcastle.jpg" data-lightbox="photoset"><img src="images/edinburghcastle.jpg" alt="Edinburgh castle" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/grandcanyon.JPG" data-lightbox="photoset"><img src="images/grandcanyon.JPG" alt="Grand Canyon" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/flowersbokeh.JPG" data-lightbox="photoset"><img src="images/flowersbokeh.JPG" alt="Flowers bokeh in Granada" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/Zipolite.jpg" data-lightbox="photoset"><img src="images/Zipolite.jpg" alt="Zipolite" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
         <div class="backtotop"><a href="#top">Back to top</a></div>
