--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <a href="images/grandcanyon.JPG" data-lightbox="photoset"><img src="images/grandcanyon.JPG" alt="Grand Canyon" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
             <div class="col s12 l4 crop-height">
-                <a href="images/Zipolite.jpg" data-lightbox="photoset"><img src="images/Zipolite.jpg" alt="Zipolite" class="threeacross scale" data-lightbox="photoset"></a>
+                <a href="images/zipolite.jpg" data-lightbox="photoset"><img src="images/zipolite.jpg" alt="Zipolite" class="threeacross scale" data-lightbox="photoset"></a>
             </div>
         </div>
         <div class="backtotop"><a href="#top">Back to top</a></div>
