First pass on changing to be portfolio based
- Added isomorphic.js
- Made header shrink on scroll down
- Added index page with links to different projects
- Added per-project pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header role=“banner”>
+    <header id="fixed-nav" role=“banner”>
         <nav role="navigation" class="navbar">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -27,7 +27,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a class="active" href="index.html" target="_self">photography</a></li>
                 <li class="active"><a href="about.html" target="_self">about</a></li>
-                <li class="active"><a href="contact.html" target="_self">contact</a></li>
+                <li class="active"><a href="workwithme.html" target="_self">work with me</a></li>
                 <li class="active"><a href="https://blog.caitlinfullam.com/" target="_blank">blog</a></li>
             </ul>
             <div id="socialmediaicons">
@@ -38,118 +38,36 @@
             </div>
         </nav>
     </header>
-    <main role=“main”>
-        <a name="top"></a>
-        <div class="row three">
-            <div class="col s12 l4 crop-height">
-                <a href="images/trilliumreflection.jpg" data-lightbox="photoset"><img src="images/trilliumreflection.jpg" alt="Trillium Reflection" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/irenenick3.jpg" data-lightbox="photoset"><img src="images/irenenick3.jpg" alt="Irene and Nick 3" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/trilliumme.jpg" data-lightbox="photoset"><img src="images/trilliumme.jpg" alt="Me at Trillium Lake" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
+    <main id="no-margin" role=“main”>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="http://placehold.it/500x333" width="100%"/>
+            <a class="project-link" href="projects/nature.html">Nature & Landscape</a>
+          </div>
+          <div class="col-md-6">
+            <img src="http://placehold.it/500x333" width="100%"/>
+            <a class="project-link" href="projects/people.html">Portraits & Engagement</a>
+          </div>
         </div>
-
-        <div class="row two">
-            <div class="col s12 l6 crop-height">
-                <a href="images/irenenick1.jpg" data-lightbox="photoset"><img src="images/irenenick1.jpg" alt="Irene and Nick 1" class="twoacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l6 crop-height">
-                <a href="images/irenenick2.jpg" data-lightbox="photoset"><img src="images/irenenick2.jpg" alt="Irene and Nick 2" class="twoacross scale" data-lightbox="photoset"></a>
-            </div>
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <img src="http://placehold.it/500x333" width="100%"/>
+            <a class="project-link" href="projects/lady-in-nature.html">Exhibit: 'Lady in Nature'</a>
+          </div>
         </div>
-
-        <div class="row three">
-            <div class="col s12 l4 crop-height">
-                <a href="images/trilliumheron.jpg" data-lightbox="photoset"><img src="images/trilliumheron.jpg" alt="Heron at Trillium Lake" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/aaron1.jpg" data-lightbox="photoset"><img src="images/aaron1.jpg" alt="Aaron 1" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/trilliumben.jpg" data-lightbox="photoset"><img src="images/trilliumben.jpg" alt="Ben at Trillium Lake" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img src="http://placehold.it/500x333" width="100%"/>
+            <a class="project-link" href="projects/travel.html">Travel</a>
+          </div>
+          <div class="col-md-6">
+            <img src="http://placehold.it/500x333" width="100%"/>
+            <a class="project-link" href="projects/film.html">Film</a>
+          </div>
         </div>
-
-        <div class="row two">
-            <div class="col s12 l6 crop-height">
-                <a href="images/ben1.jpg" data-lightbox="photoset"><img src="images/ben1.jpg" alt="Ben 1" class="twoacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l6 crop-height">
-                <a href="images/Ben2.jpg" data-lightbox="photoset"><img src="images/Ben2.jpg" alt="Ben2" class="twoacross scale" data-lightbox="photoset"></a>
-            </div>
-        </div>
-
-        <div class="row three">
-            <div class="col s12 l4 crop-height">
-                <a href="images/zionflowers.jpg" data-lightbox="photoset"><img src="images/zionflowers.jpg" alt="Zion Flowers" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/bigsur.jpg" data-lightbox="photoset"><img src="images/bigsur.jpg" alt="Big Sur" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/yosemite.jpg" data-lightbox="photoset"><img src="images/yosemite.jpg" alt="Yosemite" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-        </div>
-
-        <div class="row three">
-            <div class="col s12 l4 crop-height">
-                <a href="images/aaron2.jpg" data-lightbox="photoset"><img src="images/aaron2.jpg" alt="Aaron 2" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/berries.jpg" data-lightbox="photoset"><img src="images/berries.jpg" alt="Berries" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/aaron3.jpg" data-lightbox="photoset"><img src="images/aaron3.jpg" alt="Aaron 3" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-        </div>
-
-        <div class="row two">
-            <div class="col s12 l6 crop-height">
-                <a href="images/pineneedles.jpg" data-lightbox="photoset"><img src="images/pineneedles.jpg" alt="Pine needles" class="twoacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l6 crop-height">
-                <a href="images/selfportrait.jpg" data-lightbox="photoset"><img src="images/selfportrait.jpg" alt="Self Portrait" class="twoacross scale" data-lightbox="photoset"></a>
-            </div>
-        </div>
-
-        <div class="row three">
-            <div class="col s12 l4 crop-height">
-                <a href="images/mushrooms.jpg" data-lightbox="photoset"><img src="images/mushrooms.jpg" alt="Mushrooms" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/bridge.jpg" data-lightbox="photoset"><img src="images/bridge.jpg" alt="St Johns Bridge" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/cathedralpark.jpg" data-lightbox="photoset"><img src="images/cathedralpark.jpg" alt="Cathedral Park" class="threeacross scale"  data-lightbox="photoset"></a>
-            </div>
-        </div>
-
-        <div class="row two">
-            <div class="col s12 l6 crop-height">
-                <a href="images/isa1.jpg" data-lightbox="photoset"><img src="images/isa1.jpg" alt="Isa 1" class="twoacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l6 crop-height">
-                <a href="images/isa2.jpg" data-lightbox="photoset"><img src="images/isa2.jpg" alt="Isa 2" class="twoacross scale" data-lightbox="photoset"></a>
-            </div>
-        </div>
-
-        <div class="row three">
-            <div class="col s12 l4 crop-height">
-                <a href="images/horseshoebend.JPG" data-lightbox="photoset"><img src="images/horseshoebend.JPG" alt="Horseshoe Bend" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/grandcanyon.JPG" data-lightbox="photoset"><img src="images/grandcanyon.JPG" alt="Grand Canyon" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-            <div class="col s12 l4 crop-height">
-                <a href="images/zipolite.jpg" data-lightbox="photoset"><img src="images/zipolite.jpg" alt="Zipolite" class="threeacross scale" data-lightbox="photoset"></a>
-            </div>
-        </div>
-        <div class="backtotop"><a href="#top">Back to top</a></div>
+      </div>
     </main>
-    <hr>
     <footer role=“content info”>
         <div class="row">
             <div class="col-lg-12">
