--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html" target="_self">photography</a></li>
                 <li class="active"><a class="active" href="about.html" target="_self">about</a></li>
-                <li class="active"><a href="contact.html" target="_self">contact</a></li>
+                <li class="active"><a href="workwithme.html" target="_self">work with me</a></li>
                 <li class="active"><a href="https://blog.caitlinfullam.com/" target="_blank">blog</a></li>
             </ul>
             <div id="socialmediaicons">
