--- a/workwithme.html
+++ b/workwithme.html
@@ -25,7 +25,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html" target="_self">photography</a></li>
                 <li class="active"><a href="about.html" target="_self">about</a></li>
-                <li class="active"><a class="active" href="contact.html" target="_self">contact</a></li>
+                <li class="active"><a class="active" href="workwithme.html" target="_self">work with me</a></li>
                 <li class="active"><a href="https://blog.caitlinfullam.com/" target="_blank">blog</a></li>
             </ul>
             <div id="socialmediaicons">
@@ -36,11 +36,36 @@
         </nav>
     </header>
     <main role=“main” class="contactme">
-        <p class="contactmelist">
-            <img src="images/flowersbokeh.JPG" alt="flowersbokeh" style="width:60%;height:60%" class="contactmephoto"> Please feel free to email me at <a href="mailto:fullam.caitlin@gmail.com?Subject=Hey%20there" target="_top">fullamcaitlin@gmail.com</a>, or check out my <a href="https://www.instagram.com/caitlinnicolefullam/" target="_blank">Instagram</a>, <a href="https://blog.caitlinfullam.com" target="_blank">travel blog</a>, and <a href="https://www.linkedin.com/in/caitlinfullam" target="_blank">LinkedIn</a>.
-            <br>
-            <br>I would love to hear from you!
-        </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <h1>Contact Request</h1>
+            <p class="workwithme-subheader">If you are interested in le boudoir photoshoot, then okie.</p>
+            <form action="https://formspree.io/fullam.caitlin@gmail.com" method="POST" class="form-horizontal">
+              <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" id="inputEmail3" name="email" placeholder="Email"></input>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputmsg" class="col-sm-2 control-label">Message</label>
+                <div class="col-sm-10">
+                  <textarea class="form-control" id="inputMsg" name="message" placeholder=""></textarea>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-default">Submit Inquiry</button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="col-sm-6">
+            <img src="images/flowersbokeh.JPG" alt="flowersbokeh" style="width:100%" class="contactmephoto">
+          </div>
+        </div>
+      </div>
     </main>
     <hr>
     <footer role=“content info”>
